# python-psql-utils

./: .gitignore  README.md  mypy.ini  pyproject.toml  setup.py
.github/workflows/: lint.yml
psql_utils/: __init__.py  _crud_base.py  _fixed_execute_utils.py  _pool_utils.py  _record_shared.py  _row_utils.py  _typing.py  crud.py  crud_sync.py  errors.py  gen.py  gen_sql.py  record.py  record_sync.py  record_utils.py  sync.py  types.py
tests/: test_crud.py  test_fixed_execute.py  test_psql_utils_pool.py  test_record_id_paths.py  test_record_utils.py  test_run_with_pool_context.py
