[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "psql_utils"
version = "0.1.0"
authors = [
    {name = "Li Meng Jun", email = "lmjubuntu@gmail.com"},
]
description = "PostgreSQL Simple util tools."
readme = "README.md"
requires-python = ">=3.7"
license = {text = "MIT"}
classifiers = [
    "Programming Language :: Python :: 3",
]
dependencies = [
    'psycopg[binary,pool]',
    'mypy_extensions'
]

[tool.setuptools]
packages = [
    "psql_utils"
]
